--- a/assets/css/jonny-1.2.css
+++ b/assets/css/jonny-1.2.css
@@ -381,7 +381,7 @@ body {
 
 .jonny .infos .address {
     display: block;
-    margin-top: 50px;
+    
     padding-top: 36px;
     font-size: 20px;
     line-height: 20px;
@@ -758,4 +758,9 @@ body {
     .jonny .infos .description {
         width: 100%;
     }
+}
+
+
+.mt-200{
+    margin-top: 200px;
 }
